# pycontrol_homecage

./: .coverage  .gitignore  GUI.py  README.md  dialogs.py  emailer.py  environment.yml  experiment_tab.py  homecage_changes.txt  loc_def.py  mouse_overview.py  new_experiment_dialog.py  plotting.py  pyhomecage_env.yml  pyproject.toml  requirements.txt  requirements_dev.txt  schedule_manager.py  security_daemon.py  setup.cfg  setup.py  setup_view_tab.py  system_overview.py  tables.py  tests.md  todo_list.txt  tox.ini  users.txt  utils.py
access_control_upy/: access_control_1_1.py  hx711_gpio.py  hx711_spi.py  main_scipy_for_pyboardv2.py  main_script_for_pyboard.py  pin_classes.py
access_control_upy_legacy/: access_control_1_0.py  door_control_code.py  main_script_for_pyboard.py
com/: access_control.py  pycboard.py  system_handler.py
config/: hardware_definition_9_poke_boxes.py  paths.py
dev/: ac_backup.py  main_test_ac.py  scale_check.py
pyControl/: state_machine.py
src/: GUI.py  emailer.py  experiment_tab.py  loc_def.py  mouse_overview.py  utils.py
tasks/: all_states_example.py  basic_rew_collect.py  basic_rew_collect2.py  basic_rew_collect2_OLD.py  basic_rew_collect_fixed_seq.py  basic_rew_collect_fixed_seq_seq2.py  basic_rew_collect_fixed_seq_seq2_rew_delay.py  basic_rew_collect_fixed_seq_seq3.py  basic_rew_collect_fixed_seq_with_timeout.py  basic_rew_collect_navi.py  basic_rew_collect_navi_circle.py  basic_rew_collect_navi_ngraphs.py  basic_reward_collect_3.py  basic_reward_collect_4.py  blinker.py  blinker2.py  button.py  follow_the_light_2_graphs.py  test_new_boxes.py
tests/: test_dialogs.py  test_example.py  test_open_gui.py  (+1 more)
(+82 files in other folders)
