[metadata]
name = pycontrol_homecage
version = 0.1
description = Fully automated behavioural experiments using pycontrol
author = Yves Weissenberger
license = GPL-3
license_file = LICENSE
platforms = linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3 :: Only
    
[options]
packages = pycontrol_homecage
install_requires = 
    numpy==1.22.2
    pandas==1.4.0
    PyQt5==5.15.6
    PyQt5-Qt5==5.15.2
    PyQt5-sip==12.9.1
    pyqtgraph==0.12.3
    pyserial==3.5
    python-dateutil==2.8.2
scripts =
    src/pycontrol_homecage/GUI.py

python_requires = >= 3.6
package_dir = 
    =src
zip_safe = no