[metadata]
name = pycontrol_homecage
version = 0.1
description = Fully automated behavioural experiments using pycontrol
author = Yves Weissenberger
license = GPL-3
license_file = LICENSE
platforms = linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3 :: Only
    
[options]
packages = find:
package_dir = 
    =src 
install_requires = 
    numpy==1.22.2
    pandas==1.4.0
    PyQt5==5.15.6
    PyQt5-Qt5==5.15.2
    PyQt5-sip==12.9.1
    pyqtgraph==0.12.3
    pyserial==3.5
    python-dateutil==2.8.2
scripts =
    src/pycontrol_homecage/GUI.py

python_requires = >= 3.6
zip_safe = no


[options.packages.find]
where = src
include = pycontrol_homecage*

[options.extras_require]
testing = 
    flake8==4.0.1
    mypy==0.931
    pytest==7.0.1
    pytest-cov==3.0.0
    tox==3.24.5
    pytest-qt==4.0.2
    pytest-mock==3.7.0
[options.package_data]
pycontrol_homecage = py.typed

[flake8]
max-line-length = 160